--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 asgiref==3.3.1
+autopep8==1.5.7
 dj-database-url==0.5.0
 Django==3.1.4
 django-cors-headers==3.6.0
 djangorestframework==3.12.2
 psycopg2==2.8.6
+pycodestyle==2.7.0
 python-dateutil==2.8.1
+python-dotenv==0.19.0
 pytz==2020.5
 simplejson==3.17.2
 six==1.15.0
 sqlparse==0.4.1
+toml==0.10.2
 whitenoise==5.2.0
