--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ dj-database-url==0.5.0
 Django==3.1.4
 django-cors-headers==3.6.0
 djangorestframework==3.12.2
-psycopg2==2.8.6
+# psycopg2==2.8.6
 pycodestyle==2.7.0
 python-dateutil==2.8.1
 python-dotenv==0.19.0
