--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
 asgiref==3.7.2
-dj-database-url==0.5.0
-Django==4.2.5
-django-cors-headers==3.6.0
+dj-database-url==2.1.0
+Django==4.2.7
+django-cors-headers==4.3.0
 djangorestframework==3.14.0
-pycodestyle==2.7.0
-python-dateutil==2.8.1
-python-dotenv==0.19.0
-pytz==2020.5
-simplejson==3.17.2
-six==1.15.0
+packaging==23.2
+pip-review==1.3.0
+pycodestyle==2.11.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+simplejson==3.19.2
+six==1.16.0
 sqlparse==0.4.4
 toml==0.10.2
-typing_extensions==4.7.1
-whitenoise==5.2.0
+typing_extensions==4.8.0
+whitenoise==6.6.0
