--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,21 @@
 asgiref==3.8.1
-dj-database-url==2.1.0
-Django==5.1.3
-django-cors-headers==4.6.0
+dj-database-url==2.3.0
+Django==5.1.6
+django-cors-headers==4.7.0
 djangorestframework==3.15.2
-packaging==23.2
+iniconfig==2.0.0
+packaging==24.2
 pip-review==1.3.0
-pycodestyle==2.11.1
-python-dateutil==2.8.2
+pluggy==1.5.0
+pycodestyle==2.12.1
+pytest==8.3.4
+pytest-django==4.10.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz==2023.3.post1
-simplejson==3.19.3
-six==1.16.0
-sqlparse==0.4.4
+pytz==2025.1
+simplejson==3.20.1
+six==1.17.0
+sqlparse==0.5.3
 toml==0.10.2
-typing_extensions==4.8.0
-whitenoise==6.6.0
+typing_extensions==4.12.2
+whitenoise==6.9.0
