--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pytest-django==4.10.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
+semver==3.0.4
 simplejson==3.20.1
 six==1.17.0
 sqlparse==0.5.3
